--- a/latest/_static/opea-custom.css
+++ b/latest/_static/opea-custom.css
@@ -207,7 +207,7 @@ kbd
         -ms-flex-align: center;
             align-items: center;
     border: 1px solid #c6cbce;
-    background-color: #2B978F;
+    background-color: #FF6900;
     border-radius: 30px;
     color: white;
 }
@@ -224,7 +224,7 @@ kbd
 
 
 .grid-item a:hover {
-    background-color: #51A192;
+    background-color: #FFB500;
     color: white;
 }
 
@@ -239,7 +239,7 @@ kbd
 .grid-icon {
    line-height: 1.8;
    font-size: 4rem;
-   color: #114B4F;
+   color: #FFFFFF;
 }
 
 
