--- a/latest/_static/opea-custom.css
+++ b/latest/_static/opea-custom.css
@@ -216,11 +216,14 @@ kbd
     font-size: 1.1rem;
 }
 
+/* tweek for images in the home-page grid */
+
+/*
 .grid-item img {
     /* max-width: 50%;
-    max-height: 50%; */
+    max-height: 50%;
     margin-bottom: 0.7rem;
-}
+} */
 
 
 .grid-item a:hover {
